设置忽略目录

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,9 @@
 .DS_Store
 
-application/cache/*
-!application/cache/index.html
-
-application/logs/*
-!application/logs/index.html
-
 !application/*/.htaccess
-
 composer.lock
-
-user_guide_src/build/*
-user_guide_src/cilexer/build/*
-user_guide_src/cilexer/dist/*
-user_guide_src/cilexer/pycilexer.egg-info/*
+public/*
+!public/index.php
 
 # IDE Files
 #-------------------------
@@ -26,5 +16,4 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.stTheme.cache
 *.sublime-workspace
 *.sublime-project
-/tests/tests/
-/tests/results/
+/tests/*
